--- a/docs/ch04.md
+++ b/docs/ch04.md
@@ -1,1 +1,12 @@
 ## 4 GraphQL API
+
+
+## 4.1 apollo-server-express
+- <https://github.com/apollographql/apollo-server#readme>
+
+
+## 4.2 GraphQL
+
+
+### 4.2.1 Schema
+- <https://graphql.org/learn/schema/>
