--- a/docs/ch01.md
+++ b/docs/ch01.md
@@ -1,10 +1,10 @@
-## 1 개발환경
+## 1 Development Environment
 
-## 1.1 텍스트 편집기
+## 1.1 Text Editor
 - <https://code.visualstudio.com/>
 
 
-## 1.2 터미널
+## 1.2 Terminal
 
 
 ## 1.4 Node.js & NPM
@@ -56,6 +56,6 @@ $ npm install -g prettier
 - <https://eslint.org/>
 
 
-## 1.10 미관 꾸미기
+## 1.10 Theme
 - <https://github.com/adobe-fonts/source-code-pro>
 - <https://draculatheme.com/visual-studio-code>
