--- a/docs/ch06.md
+++ b/docs/ch06.md
@@ -1,3 +1,18 @@
 ## 6 CRUD
 
 ## 6.1
+```
+index.js
+  |
+  |- db
+  |
+  |- models
+  |
+  |- schema
+  |
+  |- resolver -- index
+                   |
+                   |- query
+                   |
+                   |- mutation
+```
