--- a/docs/ch06.md
+++ b/docs/ch06.md
@@ -6,7 +6,10 @@ index.js
   |
   |- db
   |
-  |- models
+  |- models   -- index
+  |                |
+  |                |-  note
+  |
   |
   |- schema
   |
