--- a/docs/ch06.md
+++ b/docs/ch06.md
@@ -1,6 +1,6 @@
 ## 6 CRUD
 
-## 6.1
+## 6.1 Refactoring
 ```
 index.js
   |
@@ -19,3 +19,5 @@ index.js
                    |
                    |- mutation
 ```
+
+## 6.2 Schema
